templates/op-scim-bridge_template.yaml
---
# Source: op-scim-bridge/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis-headless
  namespace: default
  labels:
    app: redis
    chart: redis-10.7.1
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: redis
    release: release-name
---
# Source: op-scim-bridge/charts/redis/templates/redis-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis-master
  namespace: default
  labels:
    app: redis
    chart: redis-10.7.1
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: redis
    release: release-name
    role: master
---
# Source: op-scim-bridge/charts/redis/templates/redis-slave-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis-slave
  namespace: default
  labels:
    app: redis
    chart: redis-10.7.1
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: redis
    release: release-name
    role: slave
---
# Source: op-scim-bridge/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-op-scim-bridge
  namespace: default
  labels:
    helm.sh/chart: op-scim-bridge-1.0.3
    app.kubernetes.io/component: op-scim-bridge
    app.kubernetes.io/name: op-scim-bridge
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "v2.3.1"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: op-scim-bridge
    app.kubernetes.io/name: op-scim-bridge
    app.kubernetes.io/instance: release-name
  type: ClusterIP
---
# Source: op-scim-bridge/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-op-scim-bridge
  namespace: default
  labels:
    helm.sh/chart: op-scim-bridge-1.0.3
    app.kubernetes.io/component: op-scim-bridge
    app.kubernetes.io/name: op-scim-bridge
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "v2.3.1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: op-scim-bridge
      app.kubernetes.io/name: op-scim-bridge
      app.kubernetes.io/instance: release-name
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: op-scim-bridge
        app.kubernetes.io/name: op-scim-bridge
        app.kubernetes.io/instance: release-name
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: op-scim-bridge
      containers:
      - name: op-scim-bridge
        image: 1password/scim:v2.3.1
        imagePullPolicy: Always
        command: ["/op-scim/op-scim"]
        args: ["--redis-host=release-name-redis-master", "--session=/secret/scimsession", "--ping-server=true", "--port=8080", "--letsencrypt-domain=example.com"]
        securityContext:
          runAsUser: 999
          runAsGroup: 999
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 250m
            memory: 512M
          requests:
            cpu: 125m
            memory: 256M
        livenessProbe:
          httpGet:
            path: /ping
            scheme: HTTP
            port: 8080
          failureThreshold: 3
          periodSeconds: 30
          initialDelaySeconds: 15
        volumeMounts:
        - name: release-name-scimsession
          mountPath: "/secret"
          readOnly: false
      volumes:
      - name: release-name-scimsession
        secret:
          secretName: release-name-scimsession
      tolerations:
        - effect: NoSchedule
          key: key1
          operator: Equal
          value: value1
---
# Source: op-scim-bridge/charts/redis/templates/redis-master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-redis-master
  namespace: default
  labels:
    app: redis
    chart: redis-10.7.1
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: redis
      release: release-name
      role: master
  serviceName: release-name-redis-headless
  template:
    metadata:
      labels:
        app: redis
        chart: redis-10.7.1
        release: release-name
        role: master
      annotations:
        checksum/health: c34a47c38561b20eb4bfcded519d850cf88fc38360ba29e96fdba30dfe7bbde4
        checksum/configmap: 675e571c315bdb8c6284c7cad20ff0f0fc4f42473b4f2c42fb34efc74113b29b
        checksum/secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    spec:
      
      securityContext:
        fsGroup: 1001
      serviceAccountName: default
      containers:
        - name: redis
          image: docker.io/bitnami/redis:6.0.5-debian-10-r6
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          command:
            - /bin/bash
            - -c
            - |
              if [[ -n $REDIS_PASSWORD_FILE ]]; then
                password_aux=`cat ${REDIS_PASSWORD_FILE}`
                export REDIS_PASSWORD=$password_aux
              fi
              if [[ ! -f /opt/bitnami/redis/etc/master.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/master.conf /opt/bitnami/redis/etc/master.conf
              fi
              if [[ ! -f /opt/bitnami/redis/etc/redis.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/redis.conf /opt/bitnami/redis/etc/redis.conf
              fi
              ARGS=("--port" "${REDIS_PORT}")
              ARGS+=("--protected-mode" "no")
              ARGS+=("--include" "/opt/bitnami/redis/etc/redis.conf")
              ARGS+=("--include" "/opt/bitnami/redis/etc/master.conf")
              /run.sh ${ARGS[@]}
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 5
          resources:
            null
          volumeMounts:
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
              subPath: 
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: redis-tmp-conf
              mountPath: /opt/bitnami/redis/etc/
      volumes:
        - name: health
          configMap:
            name: release-name-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: release-name-redis
        - name: redis-tmp-conf
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app: redis
          release: release-name
          heritage: Helm
          component: master
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
        
        selector:
  updateStrategy:
    type: RollingUpdate
---
# Source: op-scim-bridge/charts/redis/templates/redis-slave-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-redis-slave
  namespace: default
  labels:
    app: redis
    chart: redis-10.7.1
    release: release-name
    heritage: Helm
spec:
  replicas: 1
  serviceName: release-name-redis-headless
  selector:
    matchLabels:
      app: redis
      release: release-name
      role: slave
  template:
    metadata:
      labels:
        app: redis
        release: release-name
        chart: redis-10.7.1
        role: slave
      annotations:
        checksum/health: c34a47c38561b20eb4bfcded519d850cf88fc38360ba29e96fdba30dfe7bbde4
        checksum/configmap: 675e571c315bdb8c6284c7cad20ff0f0fc4f42473b4f2c42fb34efc74113b29b
        checksum/secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    spec:
      
      securityContext:
        fsGroup: 1001
      serviceAccountName: default
      containers:
        - name: redis
          image: docker.io/bitnami/redis:6.0.5-debian-10-r6
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          command:
            - /bin/bash
            - -c
            - |
              if [[ -n $REDIS_PASSWORD_FILE ]]; then
                password_aux=`cat ${REDIS_PASSWORD_FILE}`
                export REDIS_PASSWORD=$password_aux
              fi
              if [[ -n $REDIS_MASTER_PASSWORD_FILE ]]; then
                password_aux=`cat ${REDIS_MASTER_PASSWORD_FILE}`
                export REDIS_MASTER_PASSWORD=$password_aux
              fi
              if [[ ! -f /opt/bitnami/redis/etc/replica.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/replica.conf /opt/bitnami/redis/etc/replica.conf
              fi
              if [[ ! -f /opt/bitnami/redis/etc/redis.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/redis.conf /opt/bitnami/redis/etc/redis.conf
              fi
              ARGS=("--port" "${REDIS_PORT}")
              ARGS+=("--slaveof" "${REDIS_MASTER_HOST}" "${REDIS_MASTER_PORT_NUMBER}")
              ARGS+=("--protected-mode" "no")
              ARGS+=("--include" "/opt/bitnami/redis/etc/redis.conf")
              ARGS+=("--include" "/opt/bitnami/redis/etc/replica.conf")
              /run.sh "${ARGS[@]}"
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local_and_master.sh 5
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local_and_master.sh 5
          resources:
            null
          volumeMounts:
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: redis-tmp-conf
              mountPath: /opt/bitnami/redis/etc
      volumes:
        - name: health
          configMap:
            name: release-name-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: release-name-redis
        - name: sentinel-tmp-conf
          emptyDir: {}
        - name: redis-tmp-conf
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app: redis
          release: release-name
          heritage: Helm
          component: slave
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
        
        selector:
  updateStrategy:
    type: RollingUpdate
---
# Source: op-scim-bridge/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-op-scim-bridge
  namespace: default
  labels:
    helm.sh/chart: op-scim-bridge-1.0.3
    app.kubernetes.io/component: op-scim-bridge
    app.kubernetes.io/name: op-scim-bridge
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "v2.3.1"
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "scim.example.com"
    http:
      paths:
      - path: 
        pathType: ImplementationSpecific
        backend:
          service:
            name: release-name-op-scim-bridge
            port: 
              number: 80
